samples/_failures_safe/1761511759_c3431d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f0413d83.c: In function ‘main’:
./samples/SAFE/__tmp_f0413d83.c:169:12: error: missing terminating " character
  169 |     printf("Tokens:\n
      |            ^~~~~~~~~~
./samples/SAFE/__tmp_f0413d83.c:169:5: error: expected expression at end of input
  169 |     printf("Tokens:\n
      |     ^~~~~~
./samples/SAFE/__tmp_f0413d83.c:169:5: error: expected declaration or statement at end of input
